# krpc-hs

./: .gitignore  krpc-hs.cabal
KRPC/: generate.sh
KRPC/0.3.11/: KRPC.RemoteTech.json  KRPC.SpaceCenter.json
examples/: Simple.hs
krpc-codegen/: krpc-codegen.cabal
krpc-codegen/src/: Main.hs  TH.hs
src/: KRPCHS.hs
src/KRPCHS/Internal/: NetworkUtils.hs  ProtocolError.hs  Requests.hs  SerializeUtils.hs
