name:                krpc-hs
version:             1.1.2
description:         A client for KRPC
license:             GPL-3
license-file:        LICENSE
author:              Cahu
copyright:           2016 Cahu
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     KRPCHS
--                     , KRPCHS.SpaceCenter
                     -- , KRPCHS.InfernalRobotics
                     -- , KRPCHS.KerbalAlarmClock
                     -- , KRPCHS.Drawing
                     -- , KRPCHS.RemoteTech
                     -- , KRPCHS.UI
                     , KRPCHS.Service.Drawing
                     , KRPCHS.Service.InfernalRobotics
                     , KRPCHS.Service.KerbalAlarmClock
                     , KRPCHS.Service.RemoteTech
                     , KRPCHS.Service.SpaceCenter
                     , KRPCHS.Service.UI
                     , KRPCHS.Internal.Requests
                     , KRPCHS.Internal.ProtocolError
                     , KRPCHS.Internal.NetworkUtils
                     , KRPCHS.Internal.SerializeUtils
                     , PB.KRPC.Event
                     , PB.KRPC.ConnectionRequest
                     , PB.KRPC.MultiplexedRequest
                     , PB.KRPC.Parameter
                     , PB.KRPC.StreamUpdate
                     , PB.KRPC.DictionaryEntry
                     , PB.KRPC.EnumerationValue
                     , PB.KRPC.Argument
                     , PB.KRPC.Class
                     , PB.KRPC.Enumeration
                     , PB.KRPC.ConnectionResponse
                     , PB.KRPC.ProcedureResult
                     , PB.KRPC.MultiplexedResponse
                     , PB.KRPC.Service
                     , PB.KRPC.Stream
                     , PB.KRPC.ProcedureCall
                     , PB.KRPC.ConnectionResponse.Status
                     , PB.KRPC.Response
                     , PB.KRPC.Request
                     , PB.KRPC.StreamResult
                     , PB.KRPC.Status
                     , PB.KRPC.ConnectionRequest.Type
                     , PB.KRPC.Type
                     , PB.KRPC.Error
                     , PB.KRPC.Type.TypeCode
                     , PB.KRPC.Dictionary
                     , PB.KRPC.Services
                     , PB.KRPC.Set
                     , PB.KRPC.Exception
                     , PB.KRPC.Tuple
                     , PB.KRPC.List
                     , PB.KRPC.Procedure
                     , PB.KRPC
  build-depends:       base >= 4.9 && < 5
                     , transformers
                     , exceptions
                     , mtl
                     , network
                     , text
                     , bytestring
                     , containers
                     , protocol-buffers
                     , protocol-buffers-descriptor
  default-language:    Haskell2010


executable FlightRecorderCSV
    buildable:           False
    hs-source-dirs:      examples
    main-is:             FlightRecorderCSV.hs
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , krpc-hs
                       , exceptions
                       , mtl


executable KillRotation
    buildable:           False
    hs-source-dirs:      examples
    main-is:             KillRotation.hs
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , krpc-hs
                       , exceptions
                       , mtl


executable ListBiomes
    buildable:           False
    hs-source-dirs:      examples
    main-is:             ListBiomes.hs
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , krpc-hs
                       , mtl

executable Simple
    hs-source-dirs:      examples
    main-is:             Simple.hs
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , krpc-hs
                       , mtl
